--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
         crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <script src="./assets/js/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="./assets/js/javascript.js"></script>
 </head>
 
 <body>
@@ -28,10 +26,13 @@
                 <form id="uploader" action="">
                     <div class="bloque-contenido">
                         <!--Aqui va a aparecer la imagen-->
-                        <img id="image" class="  bloque-contenido--img" src="" alt="">
+                        <img id="image" class="bloque-contenido--img" src="" alt="">
                     </div>
                     <div class="bloque-contenido">
-                        <input type="file" class="text-select">
+                        <input id="file" type="file" class="text-select">
+                    </div>
+                    <div class="bloque-contenido">
+                        <button class="btn btn-primary">cargar</button>
                     </div>
                     <div class="form-group">
                         <label for="exampleFormControlInput1">Crea tu Nick</label>
@@ -50,18 +51,14 @@
             <div class="col-sm-1">
             </div>
             <div class="col-sm-7 bloque-twitt">
-               
+
             </div>
         </div>
     </div>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+    <script src="./assets/js/jquery-3.3.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="./assets/js/javascript.js"></script>
 </body>
 
 </html>
